[gd_scene load_steps=21 format=2]

[ext_resource path="res://player/Player_hack/Player_hack.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/Player_hack/target.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/Player_hack/Player_hack.gd" type="Script" id=3]
[ext_resource path="res://maps/map_sistema/blocks_maps.tres" type="MeshLibrary" id=4]
[ext_resource path="res://props/blocks/block_gray.tscn" type="PackedScene" id=5]
[ext_resource path="res://enemy/enemy_hack.tscn" type="PackedScene" id=6]
[ext_resource path="res://enemy/enemy_hack_stop.tscn" type="PackedScene" id=7]
[ext_resource path="res://maps/mine_games/game1.gd" type="Script" id=8]
[ext_resource path="res://maps/mine_games/complete_game1.gd" type="Script" id=9]
[ext_resource path="res://player/UI/complete_game.tscn" type="PackedScene" id=10]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 51.0815, 0.00113748, 51.2902 )

[sub_resource type="PlaneMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="ProceduralSky" id=4]
sky_top_color = Color( 1, 1, 1, 1 )
sky_horizon_color = Color( 0.380392, 0.380392, 0.380392, 1 )
ground_bottom_color = Color( 0.101961, 0.101961, 0.101961, 1 )
ground_horizon_color = Color( 0.380392, 0.380392, 0.380392, 1 )

[sub_resource type="Environment" id=5]
background_mode = 2
background_sky = SubResource( 4 )
glow_enabled = true
glow_strength = 0.87
glow_bloom = 0.43
glow_blend_mode = 1

[sub_resource type="CubeMesh" id=6]

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.282353 )
emission_enabled = true
emission = Color( 0.337255, 0.988235, 0.262745, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="BoxShape" id=8]

[sub_resource type="SpatialMaterial" id=9]
metallic = 1.0
roughness = 0.0
emission_enabled = true
emission = Color( 0.854902, 0.854902, 0.854902, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="Animation" id=10]
resource_name = "drop"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material:emission_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 16.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 3, 1, 1 ), Vector3( 3, 1, 1 ), Vector3( 3, 0.01, 0.01 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="game" type="Spatial"]
script = ExtResource( 8 )

[node name="Timer_reset" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="floor and ceiling" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="floor and ceiling"]
shape = SubResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="floor and ceiling"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03505, 0 )
shape = SubResource( 1 )

[node name="target" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 0, 0.264046, 0 )

[node name="Player_hack" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.9851, 0.231491, -11.0714 )
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 50, 0, 0, 0, 1, 0, 0, 0, 50, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[node name="blocks_gray" type="Spatial" parent="."]

[node name="block_gray" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 1.005, -17 )

[node name="block_gray40" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19, 1.005, -17 )

[node name="block_gray2" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 1.005, -17 )

[node name="block_gray3" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 1.005, -17 )

[node name="block_gray4" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11, 1.005, -17 )

[node name="block_gray41" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.97414, 1.005, -17 )

[node name="block_gray42" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.97414, 1.005, -17 )

[node name="block_gray43" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.97415, 1.005, -17 )

[node name="block_gray44" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.974146, 1.005, -17 )

[node name="block_gray45" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.02585, 1.005, -17 )

[node name="block_gray46" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.99778, 1.005, -5.00645 )

[node name="block_gray47" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.99778, 1.005, -5.00645 )

[node name="block_gray48" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.99779, 1.005, -5.00645 )

[node name="block_gray49" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.997786, 1.005, -5.00645 )

[node name="block_gray50" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.00221, 1.005, -5.00645 )

[node name="block_gray51" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.00935, 1.005, -5.00645 )

[node name="block_gray52" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.00935, 1.005, -5.00645 )

[node name="block_gray53" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.00935, 1.005, -5.00645 )

[node name="block_gray54" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.0094, 1.005, -5.00645 )

[node name="block_gray55" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.0094, 1.005, -5.00645 )

[node name="block_gray56" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.00935, 1.005, -16.993 )

[node name="block_gray57" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.00935, 1.005, -16.993 )

[node name="block_gray58" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.00935, 1.005, -16.993 )

[node name="block_gray59" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.0094, 1.005, -16.993 )

[node name="block_gray60" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.0094, 1.005, -16.993 )

[node name="block_gray9" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 1.005, -5 )

[node name="block_gray39" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19, 1.005, -5 )

[node name="block_gray10" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 1.005, -5 )

[node name="block_gray11" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 1.005, -5 )

[node name="block_gray12" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11, 1.005, -5 )

[node name="block_gray5" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 1.005, -25 )

[node name="block_gray18" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 1.005, -27 )

[node name="block_gray6" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 1.005, -23 )

[node name="block_gray7" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 1.005, -21 )

[node name="block_gray8" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 1.005, -19 )

[node name="block_gray13" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 1.005, -13 )

[node name="block_gray17" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 1.005, -15 )

[node name="block_gray14" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 1.005, -11 )

[node name="block_gray15" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 1.005, -9 )

[node name="block_gray16" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 1.005, -7 )

[node name="block_gray19" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 1.005, -1 )

[node name="block_gray20" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 1.005, -3 )

[node name="block_gray21" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 1.005, 1 )

[node name="block_gray22" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 1.005, 3 )

[node name="block_gray23" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 1.005, 5 )

[node name="block_gray24" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.99963, 1.005, -1 )

[node name="block_gray25" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.99963, 1.005, -3 )

[node name="block_gray26" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.99963, 1.005, 1 )

[node name="block_gray27" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.99963, 1.005, 3 )

[node name="block_gray28" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.99963, 1.005, 5 )

[node name="block_gray29" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.99963, 1.005, -12.9873 )

[node name="block_gray30" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.99963, 1.005, -14.9873 )

[node name="block_gray31" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.99963, 1.005, -10.9873 )

[node name="block_gray32" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.99963, 1.005, -8.9873 )

[node name="block_gray33" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.99963, 1.005, -6.9873 )

[node name="block_gray34" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.99963, 1.005, -25.0036 )

[node name="block_gray35" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.99963, 1.005, -27.0036 )

[node name="block_gray36" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.99963, 1.005, -23.0036 )

[node name="block_gray37" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.99963, 1.005, -21.0036 )

[node name="block_gray38" parent="blocks_gray" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.99963, 1.005, -19.0036 )

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 4 )
data = {
"cells": PoolIntArray( 10, 0, 0, 65528, 0, 0, 10, 1, 0, 65528, 1, 0, 10, 2, 0, 65528, 2, 0, 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 65528, 3, 0, 65529, 3, 0, 65530, 3, 0, 65531, 3, 0, 65532, 3, 0, 65533, 3, 0, 65534, 3, 0, 65535, 3, 0, 0, 65517, 0, 1, 65517, 0, 2, 65517, 0, 3, 65517, 0, 65535, 65517, 0, 3, 65518, 0, 65535, 65518, 0, 3, 65519, 0, 65535, 65519, 0, 3, 65520, 0, 65535, 65520, 0, 3, 65521, 0, 4, 65521, 0, 5, 65521, 0, 6, 65521, 0, 7, 65521, 0, 8, 65521, 0, 9, 65521, 0, 10, 65521, 0, 65528, 65521, 0, 65529, 65521, 0, 65530, 65521, 0, 65531, 65521, 0, 65532, 65521, 0, 65533, 65521, 0, 65534, 65521, 0, 65535, 65521, 0, 10, 65522, 0, 65528, 65522, 0, 10, 65523, 0, 65528, 65523, 0, 10, 65524, 0, 65528, 65524, 0, 10, 65525, 0, 65528, 65525, 0, 10, 65526, 0, 65528, 65526, 0, 4, 65527, 0, 10, 65527, 0, 65528, 65527, 0, 65534, 65527, 0, 10, 65528, 0, 65528, 65528, 0, 10, 65529, 0, 65528, 65529, 0, 10, 65530, 0, 65528, 65530, 0, 10, 65531, 0, 65528, 65531, 0, 10, 65532, 0, 65528, 65532, 0, 4, 65533, 0, 10, 65533, 0, 65528, 65533, 0, 65534, 65533, 0, 10, 65534, 0, 65528, 65534, 0, 10, 65535, 0, 65528, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="enemy_hack2" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 14.9837, 0.32888, -10.994 )

[node name="enemy_hack3" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.00921, 0.32888, -11.0324 )

[node name="enemy_hack_stop" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -9.00728, 0.428848, 1.03505 )

[node name="enemy_hack_stop2" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 15.0242, 0.428848, -22.9971 )

[node name="enemy_hack_stop5" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 2.98689, 0.428848, 1.01481 )

[node name="enemy_hack_stop3" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -9.00728, 0.428848, -23.0266 )

[node name="enemy_hack_stop4" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 15.0039, 0.428848, 0.999856 )

[node name="done_game" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.99792, 1.18247, -33.9926 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="Area" type="Area" parent="done_game"]
script = ExtResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="done_game/Area"]
shape = SubResource( 8 )

[node name="Porta" type="CSGBox" parent="."]
transform = Transform( 3, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, -29 )
use_collision = true
material = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Porta"]
anims/drop = SubResource( 10 )

[node name="complete_game" parent="." instance=ExtResource( 10 )]
[connection signal="body_entered" from="done_game/Area" to="done_game/Area" method="_on_Area_body_entered"]
